--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,24 @@
 
 <script>
 
+  const playSound = function(event) {
+    let keyCode = event.keyCode;
+    const audio = document.querySelector(`audio[data-key="${keyCode}"]`)
+    const key = document.querySelector(`.key[data-key="${keyCode}"]`)
+    key.classList.add('playing');
+    if (!audio) return;
+    audio.currentTime = 0;
+    audio.play();
+  }
+  
+  const removeTransition = function(e) {
+    if (e.propertyName !== 'transform') return;
+    this.classList.remove('playing');
+  }
+  
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  window.addEventListener('keydown', playSound);
 </script>
 
 
