--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,40 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.29, 0.51, 0, 3.29)
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    const timeToDegrees = (time) => {
+      return ((time/60) * 360) + 90;
+    }
+
+    const setDate = () => {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const minutes = now.getMinutes();
+      const hours = now.getHours();
+      console.log(`${hours} hours ${minutes} minutes, ${seconds} seconds`);
+      const secondDegrees = ((seconds/60) * 360) + 90;
+      const minuteDegrees = ((minutes/60) * 360) + 90;
+      const hourDegrees = ((hours/12) * 360) + 90;
+
+      secondHand.style.transform = `rotate(${secondDegrees % 360}deg)`;
+      minuteHand.style.transform = `rotate(${minuteDegrees %360}deg)`;
+      hourHand.style.transform = `rotate(${hourDegrees % 360}deg)`;
+      console.log(secondDegrees, minuteDegrees, hourDegrees)
+    }
+
+    setInterval(setDate, 1000);
 
   </script>
 </body>
