--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,28 +31,73 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const fifteenHundreds = (inventors) => {
+      return inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+    }
+    console.table(fifteenHundreds(inventors));
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const names = (inventors) => {
+      return inventors.map(inventor => `${inventor.first} ${inventor.last}`)
+    }
+    console.table(names(inventors));
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const decend = (inventors) => {
+      return inventors.sort((a,b) => a.year - b.year);
+    }
+    console.table(decend(inventors));
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const totalAge = (inventors) => {
+      return inventors.reduce((acc, inventor) => {
+        return acc + (inventor.passed - inventor.year);
+      }, 0)
+    }
+    console.log(totalAge(inventors));
 
     // 5. Sort the inventors by years lived
+    const yearsLived = (array) => {
+      return inventors.sort((a,b) => (b.passed - b.year) - (a.passed - a.year));
+    }
+    console.table(yearsLived(inventors));
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    const getBoulevards = () => {
+      const categories = document.querySelectorAll('.mw-category-group a');
+      let result = [];
+      categories.forEach(tag => {
+        if (tag.innerText.includes(' de ')) {
+          result.push(tag.innerText);
+        } 
+      })
+      return result;
+    }
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const lastNameABC = (people) => {
+      people.sort((a,b) => a.split(',')[0] - b.split(',')[0])
+      return people;
+    }
+    console.table(lastNameABC(people));
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    
+    const instances = (data) => {
+      return data.reduce((acc, item) => {
+        acc[item] = (acc[item] || 0 ) + 1;
+        return acc;
+      }, {})
+    }
+
+    console.log(instances(data));
+
 
   </script>
 </body>
