--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,39 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const oneOverAge = people.some(person => {
+      const now = new Date();
+      const year = now.getFullYear();
+      return year - person.year >= 19;
+    });
+    console.log(oneOverAge === true ? 'test passed' : 'test failed')
+
     // Array.prototype.every() // is everyone 19 or older?
+    const allOverAge = people.every(person => {
+      const now = new Date();
+      const year = now.getFullYear();
+      return year - person.year >= 19;
+    })
+    console.log(allOverAge === false ? 'test passed' : 'test failed')
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const find = comments.find(comment => {
+      return comment.id === 823423;
+    }) 
+    console.log(find)
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const findAndDelete = comments.findIndex(comment => {
+      return comment.id === 823423;
+    })
+
+    comments.splice(findAndDelete, 1)
+    
+    console.log(comments)
 
   </script>
 </body>
